Profile Icon foundation

--- a/BLAZAM/Pages/Configure/Permissions.razor
+++ b/BLAZAM/Pages/Configure/Permissions.razor
@@ -48,7 +48,7 @@
                 @if (Monitor.DirectoryConnected == ServiceConnectionState.Up)
                 {
                     <BLAZAM.Server.Shared.UI.Settings.Permissions.ImpersonateUser />
-                    <BLAZAM.Server.Shared.UI.Settings.Permissions.PrivilegeMapper />
+                    <BLAZAM.Server.Shared.UI.Settings.Permissions.PermissionMapper />
 
                 }
 
