--- a/BLAZAM/Shared/UI/OU/OUTreeView.razor
+++ b/BLAZAM/Shared/UI/OU/OUTreeView.razor
@@ -1,49 +1,75 @@
 ﻿@inherits AppComponentBase
-@if (RootOU != null && RootOU.Any())
-{
-    <MudText>@Label</MudText>
-    <MudTreeView T="IADOrganizationalUnit" ServerData="GetChildren" Items="RootOU"
+
+<MudText>@Label</MudText>
+
+<MudTreeView T="IADOrganizationalUnit"
+             ServerData="GetChildrenAsync"
+             Items="RootOU"
+             Dense="true"
+             Hover="true"
+             MaxHeight="400px"
+             Color="Color.Success"
              @bind-SelectedValue="SelectedOU">
-        <ItemTemplate>
-            <MudTreeViewItem @bind-Expanded="@context.IsExpanded"
+    <ItemTemplate>
+        <MudTreeViewItem
                          Value="@context"
-                         Items="@context.Children.ToHashSet()">
-                <Content>
-                    @if (Badge != null)
-                    {
-                        <MudBadge Content="Badge" Overlap="true" Class="mx-6 my-4">
-                            <MudTreeViewItemToggleButton @bind-Expanded="@context.IsExpanded" Visible="@context.HasChildren()" />
-                            <MudIcon Icon="@Icons.Material.Filled.Folder" Class="ml-0 mr-2" Color="@Color.Default" />
-                            <MudText>@context.CanonicalName</MudText>
-
-                                @EndAdornment?.Invoke(context)
-
-                        </MudBadge>
-                    }
-                    else
-                    {
-                        <MudTreeViewItemToggleButton @bind-Expanded="@context.IsExpanded" Visible="@context.HasChildren()" />
-                        <MudIcon Icon="@Icons.Material.Filled.Folder" Class="ml-0 mr-2" Color="@Color.Default" />
+                         LoadingIconColor="Color.Info"
+                         Text="@context.CanonicalName"
+                         Icon="@Icons.Material.Filled.Folder"
+                         Class="minw-max w-100"
+                         CanExpand=context.HasChildren()
+                            EndText="@EndText.Invoke(context)">
+            @*<Content>
+                @{
+                    string itemIcon = Icons.Material.Filled.Folder;
+                }
+                @if (context.IsExpanded)
+                {
+                    itemIcon = Icons.Material.Filled.FolderOpen;
+                }
+                @if (Badge != null)
+                {
+                    <MudBadge Content="Badge" Overlap="true" Class="mx-6 my-4">
+                        <MudTreeViewItemToggleButton  Loading=@context.IsLoadingChildren @bind-Expanded="@context.IsExpanded" Visible="@context.HasChildren()" />
+                        <MudIcon Icon="@itemIcon" Class="ml-0 mr-2" Color="@Color.Default" />
                         <MudText>@context.CanonicalName</MudText>
-                            @EndAdornment?.Invoke(context)
-                    }
-                </Content>
-            </MudTreeViewItem>
-        </ItemTemplate>
-    </MudTreeView>
 
+                        @EndAdornment?.Invoke(context)
 
+                    </MudBadge>
+                }
+                else
+                {
+                    <MudTreeViewItemToggleButton Loading=@context.IsLoadingChildren @bind-Expanded="@context.IsExpanded" Visible="@context.HasChildren()" />
+                    <MudIcon Icon="@itemIcon" Class="ml-0 mr-2" Color="@Color.Default" />
+                    <MudText>@context.CanonicalName</MudText>
+                    @EndAdornment?.Invoke(context)
+                }
+            </Content>*@
+        </MudTreeViewItem>
+    </ItemTemplate>
+</MudTreeView>
+
+@if (RootOU == null || !RootOU.Any() || LoadingData)
+{
+    <MudProgressLinear Color="Color.Secondary" Indeterminate="true" />
 
 }
 
+
+
 @code {
 
-#nullable disable warnings
+    #nullable disable warnings
+    Dictionary<IADOrganizationalUnit, bool> OULoadingStates = new();
+
     [Parameter]
     public bool StartRootExpanded { get; set; } = true;
 
     [Parameter]
     public string? Label { get; set; }
+    [Parameter]
+    public Func<IADOrganizationalUnit,string>? EndText { get; set; }
 
 
     [Parameter]
@@ -90,8 +116,8 @@
             if (value != null && value.CanRead)
             {
                 _selectedNode = value;
-                if (TopLevel == null)
-                    OnInitializedAsync();
+                //if (TopLevel == null)
+                //    OnInitializedAsync();
                 OpenToSelected();
                 SelectedOUChanged.InvokeAsync(value);
             }
@@ -113,11 +139,28 @@
     {
         await base.OnInitializedAsync();
 
+
+
+        //await InvokeAsync(StateHasChanged);
+
+        InitializeTreeView();
+
+    }
+    async Task InitializeTreeView()
+    {
+        //Wait a few milliseconds to trip the async into acutally awaiting
+        await Task.Delay(5);
+
         //ApplicationBaseOUs = Directory.OUs.FindSubOusByDN(null);
-        TopLevel = new ADOrganizationalUnit();
-        await TopLevel.Parse(Directory.GetDirectoryEntry(), Directory);
-        _ = TopLevel.Children;
-        RootOU = new HashSet<IADOrganizationalUnit>() { TopLevel };
+
+
+        if (RootOU is null || RootOU.Count < 1)
+        {
+            TopLevel = new ADOrganizationalUnit();
+            await TopLevel.Parse(Directory.GetDirectoryEntry(), Directory);
+            _ = TopLevel.Children;
+            RootOU = new HashSet<IADOrganizationalUnit>() { TopLevel };
+        }
         if (StartingSelectedOU == null)
         {
             SelectedOU = TopLevel;
@@ -125,11 +168,7 @@
         else
             OpenToSelected();
         LoadingData = false;
-
-
         await InvokeAsync(StateHasChanged);
-
-
     }
     void OpenToSelected()
     {
@@ -148,18 +187,27 @@
             }
         }
         ExpandedNodes = newExpandedNodes;
-        InvokeAsync(StateHasChanged);
+        //InvokeAsync(StateHasChanged);
 
 
     }
 
 
-
-    async Task<HashSet<IADOrganizationalUnit>> GetChildren(IADOrganizationalUnit parentNode)
+    async Task<HashSet<IADOrganizationalUnit>> GetChildrenAsync(IADOrganizationalUnit parentNode)
     {
-        return parentNode.Children.ToHashSet();
+        return GetChildren(parentNode);
     }
 
+    HashSet<IADOrganizationalUnit> GetChildren(IADOrganizationalUnit parentNode)
+    {
+        parentNode.IsLoadingChildren = true;
+         
+        var children = parentNode.Children.ToHashSet();
+
+        parentNode.IsLoadingChildren = false;
+        return children;
+
+    }
 
 
 
