--- a/BLAZAM/Shared/UI/Settings/Permissions/PermissionMapEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/PermissionMapEditor.razor
@@ -9,8 +9,8 @@
         @if (!ReadOnly)
         {
 
-            <MudSelectList Validation="@(PermissionDelegates.Count>0)"
-                Values=@PermissionDelegates
+            <MudSelectList Validation="@(_permissionDelegates.Count>0)"
+                   Values=@_permissionDelegates
                    Placeholder=@SettingsLocalization["Choose or Search..."]
                    T="PermissionDelegate"
                    ToStringFunc="item=>Directory.Groups.FindGroupBySID(item?.DelegateSid)?.GroupName"
@@ -19,23 +19,9 @@
                    @bind-Text=@selectedPermissionDelegateNames
                    @bind-SelectedValues=@Map.PermissionDelegates />
 
-        }
-        else
-        {
-            @if (selectedPermissionDelegateNames != null)
-            {
-                @foreach (var name in selectedPermissionDelegateNames)
-                {
-                    <MudButton Disabled Width=Width.Auto Flex=Flex.InlineFlex Color="Color.Secondary">@name</MudButton>
-                }
-            }
-        }
 
-        @if (!ReadOnly)
-        {
-
-            <MudSelectList Validation="@(PermissionDelegates.Count>0)"
-                Values=@accessLevels
+            <MudSelectList Validation="@(_permissionDelegates.Count>0)"
+                   Values=@_accessLevels
                    Placeholder=@SettingsLocalization["Choose or Search..."]
                    T="AccessLevel"
                    ToStringFunc="item=>item?.Name"
@@ -44,33 +30,34 @@
                               MultiSelection
                    @bind-SelectedValues=@Map.AccessLevels />
 
-        }
-        else
-        {
-            @if (selectedAccessLevelNames != null)
-            {
-                @foreach (var name in selectedAccessLevelNames)
-                {
-                    <MudButton Disabled Width=Width.Auto Flex=Flex.InlineFlex Color="Color.Secondary">@name</MudButton>
-                }
-            }
-        }
-
-
-        @if (!ReadOnly)
-        {
             <MudButton Color=Color.Success Disabled=SaveDisabled ButtonType="ButtonType.Submit">Save Mapping</MudButton>
             <AppCloseButton OnClick="DeleteMapping" />
         }
-
-
+        else
+        {
+            <MudStack>
+            @if (selectedPermissionDelegateNames != null)
+            {
+                @foreach (var pd in selectedPermissionDelegateNames.Split(SELECTION_DELIMITER))
+                {
+                    <MudButton Disabled Color="Color.Secondary">@pd</MudButton>
+                }
+            }
+            @if (_accessLevels != null)
+            {
+                @foreach (var al in _accessLevels)
+                {
+                    <MudButton Disabled  Color="Color.Secondary">@al.Name</MudButton>
+                }
+            }
+            </MudStack>
+        }
     </MudForm>
-
-    ValidateCheck();
 
 }
 @code {
-    #nullable disable warnings
+    const string SELECTION_DELIMITER = ", ";
+#nullable disable warnings
     PermissionMapping? _map;
     [Parameter]
     public PermissionMapping? Map
@@ -93,8 +80,8 @@
 
 
 
-    List<AccessLevel> accessLevels;
-    List<PermissionDelegate> PermissionDelegates;
+    List<AccessLevel> _accessLevels;
+    List<PermissionDelegate> _permissionDelegates;
     string selectedAccessLevelNames;
     string selectedPermissionDelegateNames;
     protected override async Task OnInitializedAsync()
@@ -121,15 +108,15 @@
                 {
                     Map = Context.PermissionMap.Include(m => m.PermissionDelegates).Where(pm => pm.Id == Map.Id).FirstOrDefault();
                 }
-                accessLevels = await Context.AccessLevels.ToListAsync();
-                PermissionDelegates = await Context.PermissionDelegate.Where(p => !p.IsSuperAdmin).ToListAsync();
+                _accessLevels = await Context.AccessLevels.ToListAsync();
+                _permissionDelegates = await Context.PermissionDelegate.Where(p => !p.IsSuperAdmin).ToListAsync();
                 if (Map.Id != 0)
                 {
                     string concatenatd = "";
 
                     Map.AccessLevels.Select(a => a.Name).ToList().ForEach(s =>
                     {
-                        concatenatd += s + ", ";
+                        concatenatd += s + SELECTION_DELIMITER;
 
                     });
                     if (concatenatd != "")
@@ -190,7 +177,7 @@
         {
             if (Map != null)
             {
-                if (Map.PermissionDelegates == null || Map.PermissionDelegates?.Count < 1)
+                if (Map._permissionDelegates == null || Map._permissionDelegates?.Count < 1)
                     PrivValidation.Status = ValidationStatus.Error;
                 else
                     PrivValidation.Status = ValidationStatus.Success;
