--- a/BLAZAM/Pages/Login.razor
+++ b/BLAZAM/Pages/Login.razor
@@ -143,7 +143,7 @@
 
                     break;
                 case LoginResultStatus.OK:
-                    Nav.NavigateTo(redirectUrl);
+                    Nav.NavigateTo(redirectUrl,true);
                     break;
             }
             attemptingSignIn = false;
