--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -65,6 +65,7 @@
 
                         @Body
 
+                        <AppUserPageTracker />
 
                     </MudContainer>
                     <MudElement>
@@ -81,6 +82,7 @@
                 <MudMainContent Style="height: 100vh;overflow: auto;">
                     <CascadingValue Value="this">
                         @Body
+
                     </CascadingValue>
                 </MudMainContent>
             </NotAuthorized>
@@ -88,6 +90,7 @@
 
     </MudLayout>
 </CascadingValue>
+
 
 
 
