--- a/BLAZAM/Shared/UI/Dashboard/Widgets/LockedOutUsers.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/LockedOutUsers.razor
@@ -28,8 +28,8 @@
 @code {
     List<IADUser> LockedUsers
     {
-        get => UserStateService.CurrentUserState.Cache.Get<List<IADUser>>(this.GetType());
-        set => UserStateService.CurrentUserState.Cache.Set(this.GetType(), value);
+        get => UserStateService.CurrentUserState?.Cache.Get<List<IADUser>>(this.GetType());
+        set => UserStateService.CurrentUserState?.Cache.Set(this.GetType(), value);
     }
 
     protected override async Task OnInitializedAsync()
