Working Page Chat

--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -111,6 +111,7 @@
                     </MudToolBar>
                 </MudHidden>
                 <MudSpacer />
+                <PageSpecificChat/>
                 <MudMenu Class="align-self-end" StartIcon="@Icons.Material.Filled.Settings">
 
                     <MudMenuItem>
