--- a/BLAZAM/Shared/Audio.razor
+++ b/BLAZAM/Shared/Audio.razor
@@ -1,37 +1,35 @@
-﻿@if (Playing)
-{
-    <audio onended="@PlayEnded" autoplay loop="@Loop" ><source src=@Src /></audio>
-}
-else
-{
-    <audio  muted ><source src=@Src /></audio>
-
-}
-
+﻿<audio muted src=@Src />
 @code {
+    [Inject]
+    IJSRuntime JSRuntime { get; set; }
+
     bool _playing;
     [Parameter]
-    public bool Playing { get=>_playing; set
+    public bool Playing
+    {
+        get => _playing; set
         {
             if (_playing == value) return;
             _playing = value;
+            if (_playing)
+            {
+
+                JSRuntime.InvokeVoidAsync("playAudio", new object[] { Src });
+                Playing = false;
+
+
+            }
             InvokeAsync(StateHasChanged);
-
-    } }
-
+            PlayingChanged.InvokeAsync(_playing);
+        }
+    }
+    [Parameter]
+    public EventCallback<bool> PlayingChanged { get; set; }
     [Parameter]
     public bool Loop { get; set; }
     [Parameter]
     public string Src { get; set; }
-    [Parameter]
-    public EventCallback Ended { get; set; }
 
-    private async Task PlayEnded()
-    {
-        if (!Loop)
-        {
-            Playing = false;
-            Ended.InvokeAsync();
-        }
-    }
+
+
 }
